# game-of-life

./: .gitignore  README.md  pyproject.toml
game/: __init__.py  __main__.py  app.py  model.py
game/tests/: conftest.py  test_simple.py
game/tests/data/: oscillators.py  spaceships.py  still_lifes.py
