[tool.poetry]
name = "game_of_life"
version = "0.1.0"
description = "Implementation of Conway's Game of Life."
authors = ["Ben Bonenfant <bonenfan5ben@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyglet = "^1.4.6"
numpy = "^1.17.4"
scipy = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
